--- a/_notebooks/2020-02-20-test.ipynb
+++ b/_notebooks/2020-02-20-test.ipynb
@@ -29,29 +29,14 @@
     "- comments: true\n",
     "- author: Cheryl Tan\n",
     "- categories: [fastpages, jupyter]\n",
-    "```\n",
-    "\n",
-    "- Setting `toc: true` will automatically generate a table of contents\n",
-    "- Setting `badges: true` will automatically include GitHub and Google Colab links to your notebook.\n",
-    "- Setting `comments: true` will enable commenting on your blog post, powered by [utterances](https://github.com/utterance/utterances).\n",
-    "\n",
-    "The title and description need to be enclosed in double quotes only if they include special characters such as a colon. More details and options for front matter can be viewed on the [front matter section](https://github.com/fastai/fastpages#front-matter-related-options) of the README."
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Markdown Shortcuts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A `#hide` comment at the top of any code cell will hide **both the input and output** of that cell in your blog post.\n",
-    "\n",
-    "A `#hide_input` comment at the top of any code cell will **only hide the input** of that cell."
+    "## Train , Test, Validation Sets"
    ]
   },
   {
@@ -138,13 +123,6 @@
     "sp500 = 'https://vega.github.io/vega-datasets/data/sp500.csv'\n",
     "stocks = 'https://vega.github.io/vega-datasets/data/stocks.csv'\n",
     "flights = 'https://vega.github.io/vega-datasets/data/flights-5k.json'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "place a `#collapse-output` flag at the top of any cell if you want to put the output under a collapsable element that is closed by default, but give the reader the option to open it:"
    ]
   },
   {
